2020-01-31  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Started development of 3.0-SNAPSHOT.

2020-01-30  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 2.0.0.

2020-01-25  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/maven/wagon/providers/AbstractWagonProvider.java:
	Initial writing; re-factored GSWagon and S3Wagon.

	* src/main/java/ball/maven/wagon/providers/GSWagon.java,
	src/main/java/ball/maven/wagon/providers/S3Wagon.java:
	Implemented getIfNewer(String,File,long) and
	resourceExists(String) methods.

2020-01-24  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.0.0.

	* src/main/java/ball/maven/wagon/providers/GSWagon.java:
	Re-implemented with com.google.cloud.storage.Storage.

2020-01-23  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/maven/wagon/providers/S3Wagon.java:
	Initial writing.

2017-07-09  Allen D. Ball  <ball@sol.local>

	* Removed dependency on ball:ball-util.

	* src/main/java/ball/maven/wagon/providers/GSWagon.java:
	Initial writing.
