@@ -1,5 +1,9 @@
 2020-01-31  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ball/maven/wagon/providers/GSWagon.java,
+	src/main/java/ball/maven/wagon/providers/S3Wagon.java:
+	Implemented getFileList(String).
+
 	* pom.xml: Started development of 3.0-SNAPSHOT.
 
 2020-01-30  Allen D. Ball  <ball@hcf.dev>
